Please see http://www.poissonboltzmann.org/pdb2pqr/release-history

# These are notes for the current version of PDB2PQR

- NEW FEATURES
 
- BUG FIXES